<resources>
    <string name="app_name">Weather</string>

    <!-- MainActivity -->
    <string name="temp">%s˚</string>
    <string name="rainfall">%s%%</string>
    <string name="humidity">%s%%</string>
    <string name="windshift">%s</string>
    <string name="windspeed1">약한 바람(%sm/s)</string>
    <string name="windspeed2">조금 강한 바람(%sm/s)</string>
    <string name="windspeed3">강한 바람(%sm/s)</string>
    <string name="windspeed4">매우 강한 바람(%sm/s)</string>

    <!-- acitivity_main -->
    <string name="xNoImg">이미지를 불러오지 못 하였습니다.</string>
    <string name="xRainfall">강수량</string>
    <string name="xHumidity">습도</string>
    <string name="xWindShift">풍향</string>
    <string name="xWindSpeed">풍속</string>
</resources>