<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bBlue"
    android:orientation="vertical">

    <!-- 실시간 날씨 정보 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30dp"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/imgWeather"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/xNoImg"/>

        <TextView
            android:id="@+id/txtTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="60dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="@color/white"/>
    </LinearLayout>
    <!-- 실시간 날씨 정보 -->

    <!-- 강수량, 습도 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/shape_layout"
            android:layout_weight="2">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/drop"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:contentDescription="@string/xNoImg">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/xRainfall">
            </TextView>
            <TextView
                android:id="@+id/txtRainfall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/shape_layout"
            android:layout_weight="2">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/humidity"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:contentDescription="@string/xNoImg">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/xHumidity">
            </TextView>
            <TextView
                android:id="@+id/txtHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white">
            </TextView>
        </LinearLayout>
    </LinearLayout>
    <!-- 강수량, 습도 -->

    <!-- 풍향, 풍속 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/shape_layout"
            android:layout_weight="2">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/wind"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:contentDescription="@string/xNoImg">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/xWindShift">
            </TextView>
            <TextView
                android:id="@+id/txtWindShift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/shape_layout"
            android:layout_weight="2">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/windspeed"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:contentDescription="@string/xNoImg">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/xWindSpeed">
            </TextView>
            <TextView
                android:id="@+id/txtWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white">
            </TextView>
        </LinearLayout>
    </LinearLayout>
    <!-- 풍향, 풍속 -->
</LinearLayout>